feat: inital page and erro page

--- a/touro/src/index.css
+++ b/touro/src/index.css
@@ -15,5 +15,35 @@ body {
 }
 
 .projects::-webkit-scrollbar {
-  width: 0px;
+  width: 0px !important;
 }
+
+.projects::-webkit-scrollbar-track {
+  background: transparent !important;
+}
+
+.projects::-webkit-scrollbar-thumb {
+  background: transparent !important;
+}
+
+
+/* scroll custom */
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #FF4F00;
+}
+
+/* scroll custom */
+
