--- a/touro/src/index.css
+++ b/touro/src/index.css
@@ -47,3 +47,6 @@ body {
 
 /* scroll custom */
 
+.filter-image{
+  filter: invert(39%) sepia(31%) saturate(5061%) hue-rotate(358deg) brightness(97%) contrast(109%);
+}
