--- a/touro/src/index.css
+++ b/touro/src/index.css
@@ -45,6 +45,19 @@ body {
   background: #FF4F00;
 }
 
+.chat::-webkit-scrollbar {
+  width: 6px;
+}
+
+.chat::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.chat::-webkit-scrollbar-thumb {
+  background: #FF4F00;
+}
+
+
 /* scroll custom */
 
 .filter-image{
