--- a/view/public/index.html
+++ b/view/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="tourotank - Investimento em ideias"
+      content="tourotank - Uma nova maneira de investir em ideias"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icone.png" />
 
