--- a/view/src/index.css
+++ b/view/src/index.css
@@ -12,6 +12,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 2000px;
+  margin: 0 auto;
 }
 
 .projects::-webkit-scrollbar {
