--- a/view/public/index.html
+++ b/view/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icone.png" />
+    <link rel="icon" href="%PUBLIC_URL%/imgs/bull/icone.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="tourotank - Uma nova maneira de investir em ideias"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icone.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/imgs/bull/icone.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
