--- a/view/src/index.css
+++ b/view/src/index.css
@@ -21,15 +21,15 @@ body {
   background-color: #0C0A09;
 }
 
-.projects::-webkit-scrollbar {
+.ads::-webkit-scrollbar {
   width: 0px !important;
 }
 
-.projects::-webkit-scrollbar-track {
+.ads::-webkit-scrollbar-track {
   background: transparent !important;
 }
 
-.projects::-webkit-scrollbar-thumb {
+.ads::-webkit-scrollbar-thumb {
   background: transparent !important;
 }
 
