--- a/view/src/index.css
+++ b/view/src/index.css
@@ -8,12 +8,12 @@
 
 * {
   box-sizing: border-box;
+  cursor: url(https://i.imgur.com/Ez5R4pF.png), default !important;
 }
 
 
 body {
   font-family: -apple-system, sans-serif;
-  max-width: 2000px;
   margin: 0 auto;
 }
 
