--- a/view/src/index.css
+++ b/view/src/index.css
@@ -8,8 +8,8 @@
 
 * {
   box-sizing: border-box;
-  cursor: url(https://i.imgur.com/Ez5R4pF.png), default !important;
-}
+  /* cursor: url(https://i.imgur.com/Ez5R4pF.png), default !important; https://custom-cursor.com/en/collection/minecraft/mnc-pickaxe-block-diamond */ 
+} 
 
 
 body {
