--- a/view/src/index.css
+++ b/view/src/index.css
@@ -7,6 +7,7 @@
 
 
 * {
+  /* border: 1px solid red; */
   box-sizing: border-box;
   /* cursor: url(https://i.imgur.com/Ez5R4pF.png), default !important; https://custom-cursor.com/en/collection/minecraft/mnc-pickaxe-block-diamond */ 
 } 
